k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: teamspace-app
  namespace: teamspaces
  labels:
    app: teamspace-app
spec:
  to:
    kind: Service
    name: teamspace-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
